<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/orders_item_shape"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/order"
            android:textAlignment="textEnd"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="1"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/ic_mode_edit_black_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/ic_delete_forever_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_type"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_owner"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_network_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_date"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_deal_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/reliability"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="I" />

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="II"
            />

        <RadioButton
            android:id="@+id/rb_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="III"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attachment_spot"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_attachment_spot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter_device_type"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_meter_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transformers"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_transformers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltage"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kzkzkzk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>